# CROWN

./: .gitignore  .gitmodules  .pydocstyle  .readthedocs.yaml  AUDIT_REPORT_SUMMARY.txt  AUDIT_REPORT_btag.txt  AUDIT_REPORT_jets.txt  AUDIT_REPORT_met.txt  AUDIT_REPORT_tau.txt  AUDIT_REPORT_trigger.txt  AUDIT_REPORT_zpt.txt  CMakeLists.txt  CROWN_DAG_example_template.html  CROWN_visualization.html  LICENSE  README.md  analysis.cxx  analysis_template.cxx  basefunctions.hxx  defaults.hxx  environment.yml  generate.py  htxs.hxx  init.sh  jets.hxx  law.cfg  lorentzvectors.hxx  luigi.cfg  metfilter.hxx  pairselection.hxx  physicsobjects.hxx  quantities.hxx  requirements.txt  scalefactors.hxx  setup.sh  triggers.hxx  utility.hxx
analysis_configurations/: min_config.py
checks/: cmake-formatting.sh  cpp-formatting.sh  format_ignore.txt  get-diff.sh  git-status.sh  python-formatting.sh  run-all-checks.sh  setup_from_tarball.sh
cmake/: AddBaseDependencies.cmake  AddCorrectionlib.cmake  AddDicts.cmake  AddLogging.cmake  AddOnnxruntime.cmake  AddRoot.cmake  Build.cmake  CodeGeneration.cmake  ConfigureCrownlib.cmake  ConfigurePython.cmake  FindSphinx.cmake  ParseArguments.cmake
code_generation/: analysis_template.cxx  analysis_template_friends.cxx  code_generation.py  configuration.py  exceptions.py  friend_trees.py  helpers.py  logger.py  modifiers.py  nanoAOD_quantities.py  optimizer.py  producer.py  quantities.py  quantity.py  rules.py  subset_template.cxx  systematics.py
conda_environments/: BaseWRoot_env.yml  KingMaker_env.yml  ML_LAW_env.yml
config/: class_config.py  config.py  genanalysis.py  jec_data.py  jet_variations.py  min_config.py  tau_triggersetup.py  tau_variations.py  tauembedding_tagandprobe.py  utility.py
data/: Data_PileUp_2025_69p2.root
docgenerator/: CMakeLists.txt
docgenerator/scripts/: Doxyfile  Doxyfile.in
docgenerator/scripts/sphinx_source/.doctrees/sphinx/: index.doctree
docker/: Dockerfile
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  genindex.html  index.html  mc102X_doc.html  objects.inv  searchindex.js  update_namespace_docs.py
docs/.doctrees/: environment.pickle  index.doctree
docs/doxygen/html/: basefunctions_8hxx_source.html  files.html  lorentzvectors_8hxx_source.html  md__work_sbrommer_ntuple_prototype_README.html  metfilter_8hxx_source.html  namespacemembers.html  namespacemembers_func.html  namespacequantities.html  namespaces.html  pages.html  pairselection_8hxx_source.html  physicsobjects_8hxx_source.html  quantities_8hxx_source.html
docs/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  functions_0.js  functions_1.js  functions_2.js  namespaces_0.js  pages_0.js  searchdata.js
docs/doxygen/latex/: md__work_sbrommer_ntuple_prototype_README.tex  namespacequantities.tex  namespaces.tex  refman.tex
docs/doxygen/xml/: CMakeLists_8txt.xml  README_8md.xml  analysis_8cxx.xml  analysis__playground_8cxx.xml  analysis__template_8cxx.xml  basefunctions_8hxx.xml  generate_8py.xml  index.xml  lorentzvectors_8hxx.xml  md__work_sbrommer_ntuple_prototype_README.xml  metfilter_8hxx.xml  namespaceAction.xml  namespaceConfig.xml  namespacebasefunctions.xml  namespacegenerate.xml  namespacelorentzvectors.xml  namespacelorentzvectors_1_1mutau.xml  namespacemetfilter.xml  namespacepairselection.xml  namespacepairselection_1_1mutau.xml  namespacephysicsobject.xml  namespacephysicsobject_1_1electron.xml  namespacephysicsobject_1_1jet.xml  namespacephysicsobject_1_1muon.xml  namespacephysicsobject_1_1tau.xml  namespacequantities.xml  pairselection_8hxx.xml  physicsobjects_8hxx.xml  quantities_8hxx.xml
docs/others/: Objects.md  files.yml
docs/sphinx/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/sphinx/.doctrees/: environment.pickle  index.doctree
docs/sphinx/_sources/: index.rst.txt
docs/sphinx_source/: build_root.rst  c_functions.rst  changelog.rst  cms_analysis.rst  conf.py  contrib.rst  correction_manager.rst  cpp_addons.rst  create_nanoaod.rst  friend_trees.rst  index.rst  introduction.rst  kingmaker.rst  namespaces.rst  nanoAODversions.rst  postprocessing.rst  py_classes.rst  py_configuration.rst  py_producers.rst  py_quantities.rst  visualization.rst
docs/sphinx_source/c_namespaces/: basefilters.rst  basefunctions.rst  correctionManager.rst  ditau_pairselection.rst  embedding.rst  event.rst  fakefactors.rst  fmt.rst  genmatching.rst  genparticles.rst  htxs.rst  jet.rst  lorentzvector.rst  lorentzvectors.rst  met.rst  metfilter.rst  ml.rst  onnxhelper.rst  physicsobject.rst  quantities.rst  reweighting.rst  scalefactor.rst  topreco.rst  trigger.rst  utility.rst  vectoroperations.rst  whtautau_tripleselection.rst
docs/sphinx_source/py_classes/: code_generation.rst  configuration.rst  friend_trees.rst  modifiers.rst  optimizer.rst  producers.rst  quantity.rst  rules.rst  systematics.rst
example_cl/: Produce_friends.sh  Produce_samples.sh
example_command_line/: Produce_friends.sh  Produce_samples.sh
include/: RoccoR.hxx  basefilters.hxx  basefunctions.hxx  defaults.hxx  electrons.hxx  embedding.hxx  event.hxx  example.hxx  fakefactors.hxx  fakefactors_old.hxx  fatjets.hxx  finalstate.hxx  genparticles.hxx  hadrecoil.hxx  hhkinfit.hxx  htxs.hxx  jets.hxx  lorentzvectors.hxx  met.hxx  metfilter.hxx  ml.hxx  muons.hxx  pairselection.hxx  photons.hxx  physicsobjects.hxx  quantities.hxx  reweighting.hxx  scalefactors.hxx  solution.hxx  taus.hxx  topreco.hxx  triggers.hxx  tripleselection.hxx  vectoroperations.hxx
lawluigi_configs/: GPU_example_law.cfg  GPU_example_luigi.cfg  KingMaker_law.cfg  KingMaker_luigi.cfg  ML_LAW_law.cfg  ML_LAW_luigi.cfg  ML_train_law.cfg  ML_train_luigi.cfg
processor/: framework.py  setup_law_remote.sh  setup_lawcrown.sh  setup_lawcrown_etp.sh  setup_lawcrown_generic.sh
profiling/: flamegraph.sh  massif.sh  root_cluster_ranges.sh
sample_database/: datasets.yaml
scripts/: ProductionStatus.py  python-formatting.sh
setup/: dasclient.sh  setup_crown_cmake.sh
src/: RoccoR.cxx  defaults.hxx  (+45 more)
tests/: CMakeLists.txt  generate_sample.cxx
(+335 files in other folders)
